--- a/templates/programmer/portfolio_form.html
+++ b/templates/programmer/portfolio_form.html
@@ -1,5 +1,5 @@
 <div class="flex-column">
-    <label for="{{ form.image.id_for_label }}">{{ form.image.label }}</label>
+    <label for="{{ form.image.id_for_label }}">Загрузить изображение:</label>
 </div>
 <div class="inputForm">
     {{ form.image }}
@@ -19,7 +19,7 @@
 </div>
 
 <div class="flex-column">
-    <label for="{{ form.introduction.id_for_label }}">{{ form.introduction.label }}</label>
+    <label for="{{ form.introduction.id_for_label }}">О себе:</label>
 </div>
 <div class="inputFormTextarea">
     {{ form.introduction }}
@@ -29,7 +29,7 @@
 </div>
 
 <div class="flex-column">
-    <label for="{{ form.education_or_courses.id_for_label }}">{{ form.education_or_courses.label }}</label>
+    <label for="{{ form.education_or_courses.id_for_label }}">Образование/курсы:</label>
 </div>
 <div class="inputFormTextarea">
     {{ form.education_or_courses }}
@@ -39,7 +39,7 @@
 </div>
 
 <div class="flex-column">
-    <label for="{{ form.qualities.id_for_label }}">{{ form.qualities.label }}</label>
+    <label for="{{ form.qualities.id_for_label }}">Качества:</label>
 </div>
 <div class="inputFormTextarea">
     {{ form.qualities }}
@@ -49,7 +49,7 @@
 </div>
 
 <div class="flex-column">
-    <label for="{{ form.skills.id_for_label }}">{{ form.skills.label }}</label>
+    <label for="{{ form.skills.id_for_label }}">Навыки</label>
 </div>
 <div class="inputFormTextarea">
     {{ form.skills }}
