--- a/templates/portfolio_info.html
+++ b/templates/portfolio_info.html
@@ -1,5 +1,5 @@
-<h3>Фамилия Имя:</h3>
-<p class="info">{{ portfolio.user.last_name }} {{ portfolio.user.first_name }}</p>
+<h3>Имя Фамилия:</h3>
+<p class="info">{{ portfolio.user.first_name }} {{ portfolio.user.last_name }}</p>
 <h3>Github:</h3>
 <p class="info">
     <a href="{{ portfolio.github }}" target="_blank">{{ portfolio.github }}</a>
