--- a/home/static/css/customer.css
+++ b/home/static/css/customer.css
@@ -176,3 +176,54 @@
     }
 
 }
+
+.comments {
+    width: 100%;
+    margin-bottom: 30px;
+
+    h3 {
+        margin: 30px 0 0 calc(5% - 10px);
+    }
+
+    .comment-cnt {
+        display: flex;
+        margin: 15px 0 0 calc(5% - 10px);
+    }
+
+    .comment-cnt-inner {
+        width: 70%;
+        padding: 20px;
+        display: flex;
+        border-radius: 15px;
+        box-shadow: 0 0 19px -3px rgba(0, 0, 0, 0.3);
+    }
+
+    .left-comment-part {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+        margin-right: 10px;
+        min-width: 120px;
+        max-width: 200px;
+    }
+
+    .author {
+        font-weight: 600;
+        color: #222;
+        font-size: 1.1rem;
+    }
+
+    .created-at {
+        color: #999;
+        font-size: 0.85rem;
+        margin-top: 5px;
+    }
+
+    .text {
+        flex: 1;
+        font-size: 1rem;
+        line-height: 1.5;
+        color: #444;
+        text-align: justify;
+    }
+}
