--- a/templates/programmer/order_list.html
+++ b/templates/programmer/order_list.html
@@ -47,9 +47,9 @@
                         {% if order.deadline %}
                             <div class="deadline">Выполнить до: {{ order.deadline }}</div>
                         {% endif %}
-                        {% if order.programmer %}
-                            <div class="programmer">Выполняет: {{ order.programmer }}</div>
-                        {% endif %}
+
+                        <div class="programmer">Заказчик: {{ order.author.first_name }} {{ order.author.last_name }}</div>
+
                         {% if order.taken %}
                             <div class="taken">{{ order.taken }}</div>
                         {% endif %}
