--- a/home/static/css/login.css
+++ b/home/static/css/login.css
@@ -16,7 +16,7 @@ body {
     background-color: #f6f6f6;
     padding: 30px;
     width: 450px;
-    border-radius: 20px;
+    border-radius: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -156,6 +156,7 @@ body {
 
 .auth-label {
     margin-top: 30px;
+    font-weight: 400;
 }
 
 #id_group {
