--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/programmer.css' %}">
     <link rel="stylesheet" href="{% static 'css/customer.css' %}">
     <link rel="stylesheet" href="{% static 'css/forms.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="{% static 'image/favicon/favicon.png' %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
