--- a/templates/programmer/home.html
+++ b/templates/programmer/home.html
@@ -34,8 +34,42 @@
                         </a>
                     </div>
                 </div>
-                {% else %}
-                подпишитесь на ваши любимые категории заказов
+            {% else %}
+                <div class="centered">
+                    <h3 style="margin-top: 30px; margin-bottom: 10px;">Ваши подписки:</h3>
+                </div>
+                <div class="centered">
+                    <div class="subscription-list">
+                        {% for subscription in subscriptions %}
+                            <div class="subscription-item">
+                                <span>{{ subscription.get_category_display }}</span>
+                                <form method="post" action="{% url 'programmer:delete_subscription' subscription.id %}">
+                                    {% csrf_token %}
+                                    <button type="submit" class="delete-button">Удалить</button>
+                                </form>
+                            </div>
+                        {% empty %}
+                            <p>Нет активных подписок на категории</p>
+                        {% endfor %}
+                    </div>
+                </div>
+                <h3 style="display: flex; justify-content: center; margin-top: 20px;">Подпишитесь на ваши любимые
+                    категории заказов</h3>
+                <div class="create-order-cnt">
+                    <form method="post" enctype="multipart/form-data">
+                        <div class="flex-column">
+                            <label for="{{ form.category.id_for_label }}">Категория:</label>
+                        </div>
+                        <div class="inputForm">
+                            {{ form.category }}
+                        </div>
+                        {% if form.category.errors %}
+                            <div class="error-category">{{ form.category.errors }}</div>
+                        {% endif %}
+                        {% csrf_token %}
+                        <button type="submit" class="button-create-order">Подписаться</button>
+                    </form>
+                </div>
             {% endif %}
 
         {% endif %}
